--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -34,5 +33,10 @@ ENV/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Local development settings
+# Generated files
+presentations/images/*
+reports/*.pdf
+data/processed/*
+
+# Environment variables
 .env 
