--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-pandas
-numpy
-scikit-learn
-streamlit
-plotly
-seaborn
-matplotlib
-pytest
-black
-pylint
-sqlalchemy
-psycopg2-binary 
+pandas==2.0.0
+numpy==1.24.0
+plotly==5.13.0
+streamlit==1.22.0
+scikit-learn==1.2.2
+python-pptx==0.6.21
+kaleido==0.2.1
+pytest==7.3.1
+python-dotenv==1.0.0 
