--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,186 @@
-pandas==2.0.0
-numpy==1.24.0
-plotly==5.13.0
-streamlit==1.22.0
-scikit-learn==1.2.2
-python-pptx==0.6.21
-kaleido==0.2.1
-pytest==7.3.1
-python-dotenv==1.0.0
-sqlalchemy==2.0.23
-pymysql==1.1.0 
+absl-py
+acres
+aiofiles
+altair
+annotated-types
+anyio
+appwrite
+arrow
+astunparse
+attrs
+beautifulsoup4
+blinker
+cachetools
+Camelot
+camelot-py
+certifi
+cffi
+chardet
+charset-normalizer
+ci-info
+click
+colorama
+configobj
+configparser
+contourpy
+cryptography
+cycler
+dateparser
+decorator
+ecdsa
+Elixir
+et_xmlfile
+etelemetry
+fastapi
+filelock
+fitz
+Flask
+Flask-Cors
+flatbuffers
+fonttools
+frozendict
+gast
+ghostscript
+gitdb
+GitPython
+google-pasta
+grpcio
+h11
+h5py
+html5lib
+httpcore
+httplib2
+httpx
+idna
+iniconfig
+isodate
+itsdangerous
+jax
+jaxlib
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kaleido
+keras
+kiwisolver
+libclang
+looseversion
+lxml
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+mediapipe
+ml-dtypes
+moment
+multitasking
+namex
+narwhals
+networkx
+nibabel
+nipype
+nltk
+numpy
+opencv-contrib-python
+openpyxl
+opt_einsum
+optree
+packaging
+pandas
+pathlib
+pbr
+pdf2image
+pdfminer.six
+pdfplumber
+peewee
+pillow
+platformdirs
+plotly
+pluggy
+protobuf
+prov
+puremagic
+px
+pyarrow
+pyasn1
+pycparser
+pydantic
+pydantic_core
+pydeck
+pydot
+Pygments
+PyMuPDF
+PyMuPDFb
+pyparsing
+pypdf
+pypdfium2
+pytest
+python-dateutil
+python-docx
+python-dotenv
+python-jose
+python-magic
+python-magic-bin
+python-multipart
+python-pptx
+python-telegram-bot
+pytz
+pyxnat
+rdflib
+referencing
+regex
+requests
+rich
+rpds-py
+rsa
+scikit-learn
+scipy
+seaborn
+sentencepiece
+setuptools
+simplejson
+six
+smmap
+sniffio
+sounddevice
+soupsieve
+SQLAlchemy
+sqlalchemy-migrate
+sqlparse
+starlette
+streamlit
+ta
+tabulate
+telegram
+-e git+https://github.com/Kidyoh/10Academy-week2-Challenge.git@37123a23445f8e110329f9a789c0c5b7c6fdfd9d#egg=tellco_analysis
+Tempita
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow_intel
+termcolor
+textblob
+threadpoolctl
+times
+toml
+tornado
+tqdm
+traits
+types-python-dateutil
+typing_extensions
+tzdata
+tzlocal
+urllib3
+uvicorn
+watchdog
+webencodings
+Werkzeug
+wheel
+wrapt
+xlrd
+XlsxWriter
+xlwt
+yfinance
