--- a/requirements.txt
+++ b/requirements.txt
@@ -1,184 +1,11 @@
-absl-py
-acres
-aiofiles
-altair
-annotated-types
-anyio
-appwrite
-arrow
-astunparse
-attrs
-beautifulsoup4
-blinker
-cachetools
-Camelot
-camelot-py
-certifi
-cffi
-chardet
-charset-normalizer
-ci-info
-click
-colorama
-configobj
-configparser
-contourpy
-cryptography
-cycler
-dateparser
-decorator
-ecdsa
-Elixir
-et_xmlfile
-etelemetry
-fastapi
-filelock
-fitz
-Flask
-Flask-Cors
-flatbuffers
-fonttools
-frozendict
-gast
-ghostscript
-gitdb
-GitPython
-google-pasta
-grpcio
-h11
-h5py
-html5lib
-httpcore
-httplib2
-httpx
-idna
-iniconfig
-isodate
-itsdangerous
-jax
-jaxlib
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-kaleido
-keras
-kiwisolver
-libclang
-looseversion
-lxml
-Markdown
-markdown-it-py
-MarkupSafe
-matplotlib
-mdurl
-mediapipe
-ml-dtypes
-moment
-multitasking
-namex
-narwhals
-networkx
-nibabel
-nipype
-nltk
-numpy
-opencv-contrib-python
-openpyxl
-opt_einsum
-optree
-packaging
-pandas
-pathlib
-pbr
-pdf2image
-pdfminer.six
-pdfplumber
-peewee
-pillow
-platformdirs
-plotly
-pluggy
-protobuf
-prov
-puremagic
-px
-pyarrow
-pyasn1
-pycparser
-pydantic
-pydantic_core
-pydeck
-pydot
-Pygments
-PyMuPDF
-PyMuPDFb
-pyparsing
-pypdf
-pypdfium2
-pytest
-python-dateutil
-python-docx
-python-dotenv
-python-jose
-python-multipart
-python-pptx
-python-telegram-bot
-pytz
-pyxnat
-rdflib
-referencing
-regex
-requests
-rich
-rpds-py
-rsa
-scikit-learn
-scipy
-seaborn
-sentencepiece
-setuptools
-simplejson
-six
-smmap
-sniffio
-sounddevice
-soupsieve
-SQLAlchemy
-sqlalchemy-migrate
-sqlparse
-starlette
-streamlit
-ta
-tabulate
-telegram
--e git+https://github.com/Kidyoh/10Academy-week2-Challenge.git@37123a23445f8e110329f9a789c0c5b7c6fdfd9d#egg=tellco_analysis
-Tempita
-tenacity
-tensorboard
-tensorboard-data-server
-tensorflow
-tensorflow_intel
-termcolor
-textblob
-threadpoolctl
-times
-toml
-tornado
-tqdm
-traits
-types-python-dateutil
-typing_extensions
-tzdata
-tzlocal
-urllib3
-uvicorn
-watchdog
-webencodings
-Werkzeug
-wheel
-wrapt
-xlrd
-XlsxWriter
-xlwt
-yfinance
+numpy==2.2.1
+pandas==2.2.3
+plotly==5.24.1
+pytest==8.3.4
+python-dotenv==1.0.1
+python_pptx==1.0.2
+scikit_learn==1.6.0
+scipy==1.14.1
+setuptools==75.5.0
+SQLAlchemy==0.7.10
+streamlit==1.40.2
