req updated without version numebrs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy==2.2.1
-pandas==2.2.3
-plotly==5.24.1
-pytest==8.3.4
-python-dotenv==1.0.1
-python_pptx==1.0.2
-scikit_learn==1.6.0
-scipy==1.14.1
-setuptools==75.5.0
-SQLAlchemy==0.7.10
-streamlit==1.40.2
+numpy
+pandas
+plotly
+pytest
+python-dotenv
+python_pptx
+scikit_learn
+scipy
+setuptools
+SQLAlchemy
+streamlit
