Dashboard customization implemented

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
-pandas
-plotly
-pytest
-python-dotenv
-python_pptx
-scikit_learn
-scipy
-setuptools
-SQLAlchemy
-streamlit
+pandas==2.0.0
+numpy==1.24.0
+plotly==5.13.0
+streamlit==1.22.0
+scikit-learn==1.2.2
+python-pptx==0.6.21
+kaleido==0.2.1
+pytest==7.3.1
+python-dotenv==1.0.0
+sqlalchemy==2.0.23
+pymysql==1.1.0 
