--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pandas==2.0.0
-numpy==1.24.0
-plotly==5.13.0
-streamlit==1.22.0
-scikit-learn==1.2.2
-python-pptx==0.6.21
-kaleido==0.2.1
-pytest==7.3.1
-python-dotenv==1.0.0
-sqlalchemy==2.0.23
-pymysql==1.1.0 
+pandas
+numpy
+plotly
+streamlit
+scikit-learn
+python-pptx
+kaleido
+pytest
+python-dotenv
+sqlalchemy
+pymysql
+distutils
